[gd_scene load_steps=5 format=3 uid="uid://b2tyifmg01tlv"]

[ext_resource type="Script" path="res://Map/UI/GameUI.gd" id="1_bmuld"]
[ext_resource type="Texture2D" uid="uid://c3aa6okxkw00k" path="res://image/觀察箱底圖素材/黑白.png" id="3_6ndgx"]
[ext_resource type="Theme" uid="uid://f050vq24bj7p" path="res://fonts/Theme.tres" id="3_cqal2"]

[sub_resource type="Theme" id="Theme_bhsl5"]
default_font_size = 20

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_bmuld")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_cqal2")

[node name="Foreground" type="TextureRect" parent="Control"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_6ndgx")

[node name="DEBUGPanel" type="Panel" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 756.0
offset_top = 387.0
offset_right = -37.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bhsl5")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DEBUGPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 23.0
offset_right = 160.0
offset_bottom = 94.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DEBUGPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/DEBUGPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GO"

[node name="Input" type="SpinBox" parent="Control/DEBUGPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetDataButton" type="Button" parent="Control/DEBUGPanel/VBoxContainer"]
layout_mode = 2
text = "ResetSaveData"

[node name="Label" type="Label" parent="Control/DEBUGPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = -1.0
offset_right = 134.0
offset_bottom = 22.0
text = "DEBUGPanel"

[node name="InputPanel" type="Panel" parent="Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.87451)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 620.0
offset_top = 300.0
offset_right = 920.0
offset_bottom = 500.0

[node name="Up" type="Button" parent="Control/InputPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 90.0
grow_horizontal = 2
focus_mode = 0
text = "↑"

[node name="Left" type="Button" parent="Control/InputPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -45.0
offset_right = 90.0
offset_bottom = 45.0
grow_vertical = 2
focus_mode = 0
text = "←"

[node name="Down" type="Button" parent="Control/InputPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -90.0
offset_right = 45.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "↓"

[node name="Right" type="Button" parent="Control/InputPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -45.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
text = "→"

[node name="Undo" type="Button" parent="Control/InputPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_bottom = 45.0
grow_horizontal = 0
focus_mode = 0
text = "Z"

[node name="OpenInput" type="Button" parent="Control/InputPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "⤡"
flat = true

[node name="GamePanel" type="Panel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 34.0
offset_right = -37.0
offset_bottom = -372.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelSelectButton" type="Button" parent="Control/GamePanel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "LevelSelect"

[node name="Level" type="RichTextLabel" parent="Control/GamePanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24.57)
layout_mode = 2
theme = ExtResource("3_cqal2")
bbcode_enabled = true
text = "[center][font_size=20]Level 3[/font_size][/center]"

[node name="Hint" type="Label" parent="Control/GamePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = " Move: WASD
 Undo: Z"

[connection signal="button_down" from="Control/DEBUGPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Control/DEBUGPanel/VBoxContainer/ResetDataButton" to="." method="_on_reset_data_button_button_down"]
[connection signal="button_down" from="Control/InputPanel/Up" to="." method="_on_up_button_down"]
[connection signal="button_down" from="Control/InputPanel/Left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="Control/InputPanel/Down" to="." method="_on_down_button_down"]
[connection signal="button_down" from="Control/InputPanel/Right" to="." method="_on_right_button_down"]
[connection signal="button_down" from="Control/InputPanel/Undo" to="." method="_on_undo_button_down"]
[connection signal="button_down" from="Control/InputPanel/OpenInput" to="." method="_on_open_input_button_down"]
[connection signal="button_down" from="Control/GamePanel/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_button_down"]
